Ported basic texturing support to Draw

--- a/Source/Deliberation/CMakeLists.txt
+++ b/Source/Deliberation/CMakeLists.txt
@@ -7,6 +7,9 @@ set(source_path 	"${CMAKE_CURRENT_SOURCE_DIR}/source")
 # packages
 find_package(glbinding  REQUIRED)
 find_package(GLM        REQUIRED)
+FIND_PACKAGE(IL		    REQUIRED)
+FIND_PACKAGE(ILU	    REQUIRED)
+FIND_PACKAGE(SDL2	    REQUIRED)
 
 # include
 include_directories(
@@ -17,6 +20,7 @@ include_directories(
 
     ${GLBINDING_INCLUDE_DIR}
     ${GLM_INCLUDE_DIR}
+    ${IL_INCLUDE_DIR}
 )
 
 # library type
@@ -44,9 +48,24 @@ set(sources
     ${source_path}/Draw/Detail/DrawExecution.h
     ${source_path}/Draw/Detail/DrawImpl.cpp
     ${source_path}/Draw/Detail/DrawImpl.h
+    ${source_path}/Draw/Detail/ILUtils.cpp
+    ${source_path}/Draw/Detail/ILUtils.h
+    ${source_path}/Draw/Detail/ITextureLoaderImpl.cpp
+    ${source_path}/Draw/Detail/ITextureLoaderImpl.h
     ${source_path}/Draw/Detail/ProgramImpl.cpp
     ${source_path}/Draw/Detail/ProgramImpl.h
+    ${source_path}/Draw/Detail/TextureBindingImpl.cpp
+    ${source_path}/Draw/Detail/TextureBindingImpl.h
+    ${source_path}/Draw/Detail/TextureLoaderCubeFilesImpl.cpp
+    ${source_path}/Draw/Detail/TextureLoaderCubeFilesImpl.h
+    ${source_path}/Draw/Detail/TextureLoaderDataImpl.cpp
+    ${source_path}/Draw/Detail/TextureLoaderDataImpl.h
+    ${source_path}/Draw/Detail/TextureLoaderFileImpl.cpp
+    ${source_path}/Draw/Detail/TextureLoaderFileImpl.h
+    ${source_path}/Draw/Detail/TextureLoaderSDLSurfaceImpl.cpp
+    ${source_path}/Draw/Detail/TextureLoaderSDLSurfaceImpl.h
     ${source_path}/Draw/Detail/UniformImpl.cpp
+    
     ${source_path}/Draw/GL/GLSLSizeOf.cpp
     ${source_path}/Draw/GL/GLStateManager.cpp
     ${source_path}/Draw/GL/GLUtils.cpp
@@ -55,6 +74,7 @@ set(sources
     ${source_path}/Draw/GL/GLVertexAttributeBinder.h
     ${source_path}/Draw/GL/GLVertexAttributeFormat.cpp
     ${source_path}/Draw/GL/GLVertexAttributeFormat.h
+    
     ${source_path}/Draw/BlendState.cpp
     ${source_path}/Draw/Buffer.cpp
     ${source_path}/Draw/BufferLayout.cpp
@@ -72,13 +92,23 @@ set(sources
     ${source_path}/Draw/DrawVerification.cpp
     ${source_path}/Draw/DrawVerification.h
     ${source_path}/Draw/DrawState.cpp
+    ${source_path}/Draw/PixelFormat.cpp
     ${source_path}/Draw/Program.cpp
     ${source_path}/Draw/ProgramInterface.cpp
     ${source_path}/Draw/ProgramInterfaceFragmentOutput.cpp
+    ${source_path}/Draw/ProgramInterfaceSampler.cpp
     ${source_path}/Draw/ProgramInterfaceUniform.cpp
     ${source_path}/Draw/ProgramInterfaceVertexAttribute.cpp
     ${source_path}/Draw/RasterizerState.cpp
     ${source_path}/Draw/StencilState.cpp
+    ${source_path}/Draw/StencilState.cpp
+    ${source_path}/Draw/Surface.cpp
+    ${source_path}/Draw/SurfaceBinary.cpp
+    ${source_path}/Draw/Texture.cpp
+    ${source_path}/Draw/TextureBinary.cpp
+    ${source_path}/Draw/TextureBinding.cpp
+    ${source_path}/Draw/TextureLoader.cpp
+    ${source_path}/Draw/TextureUploader.cpp
     ${source_path}/Draw/Uniform.cpp
 )
 
@@ -121,13 +151,22 @@ set(api_includes
     ${include_path}/Draw/Draw.h
     ${include_path}/Draw/Draw.inl
     ${include_path}/Draw/DrawState.h
+    ${include_path}/Draw/PixelFormat.h
     ${include_path}/Draw/Program.h
     ${include_path}/Draw/ProgramInterface.h
     ${include_path}/Draw/ProgramInterfaceFragmentOutput.h
     ${include_path}/Draw/ProgramInterfaceUniform.h
+    ${include_path}/Draw/ProgramInterfaceSampler.h
     ${include_path}/Draw/ProgramInterfaceVertexAttribute.h
     ${include_path}/Draw/RasterizerState.h
     ${include_path}/Draw/StencilState.h
+    ${include_path}/Draw/Surface.h
+    ${include_path}/Draw/SurfaceBinary.h
+    ${include_path}/Draw/Texture.h
+    ${include_path}/Draw/TextureBinary.h
+    ${include_path}/Draw/TextureBinding.h
+    ${include_path}/Draw/TextureLoader.h
+    ${include_path}/Draw/TextureUploader.h    
     ${include_path}/Draw/Uniform.h
     ${include_path}/Draw/Uniform.inl
 )
@@ -135,7 +174,11 @@ set(api_includes
 # libs
 set(libs
     ${GLBINDING_LIBRARY}
+    ${IL_LIBRARIES}
+    ${ILU_LIBRARIES}
+    ${SDL2_LIBRARY}
 )
 
 # library
 add_library(Deliberation ${api_includes} ${sources})
+target_link_libraries(Deliberation ${libs})
