--- a/Source/Examples/CMakeLists.txt
+++ b/Source/Examples/CMakeLists.txt
@@ -51,3 +51,7 @@ target_link_libraries(BasicFontExample ${libs})
 add_executable(BasicRenderTargetExample BasicRenderTargetExample.cpp)
 target_link_libraries(BasicRenderTargetExample ${libs})
 
+# BasicSceneExample
+add_executable(BasicSceneExample BasicSceneExample.cpp)
+target_link_libraries(BasicSceneExample ${libs})
+
